[project]
name = "lucas"
version = "0.1.0"
description = "Lucas - A sophisticated multi-agent system for intelligent task coordination and plugin-based extensibility"
authors = [
    { name = "Jonas Kahn", email = "me@ifelse.one" }
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "pydantic (>=2.11.7,<3.0.0)",
    "pydantic-settings (>=2.10.1,<3.0.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "langchain (>=0.3.27,<0.4.0)",
    "langchain-core (>=0.3.74,<0.4.0)",
    "langchain-community (>=0.3.27,<0.4.0)",
    "langgraph[add] (>=0.6.5,<0.7.0)",
    "langchain-anthropic (>=0.3.18,<0.4.0)",
    "duckduckgo-search (>=8.1.1,<9.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "redis (>=6.4.0,<7.0.0)",
    "langchain-openai (>=0.3.30,<0.4.0)",
    "fastapi (>=0.116.1,<0.117.0)",
    "uvicorn[standard] (>=0.35.0,<0.36.0)"
]

[tool.poetry]
packages = [{ include = "lucas", from = "src" }]

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
pytest-asyncio = "^1.1.0"
black = "^25.1.0"
mypy = "^1.17.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"